tests/ParseSpec/invalid/expr/case-double-wildcard-2.algst
case x of {
  wild1 -> 1,
  _ -> 2,
}
